<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"/>

    <!-- Overlay to improve readability -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!-- Content Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:layout_centerInParent="true">

        <!-- Title -->
        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_diet_options"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:paddingBottom="30dp"
            android:fontFamily="@font/bold_font"/>

        <!-- Upload Previous Scan Button -->
        <Button
            android:id="@+id/general_diet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general_diet_plan"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:backgroundTint="#F48FB1"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/semibold_font"/>

        <!-- Upload Existing video-->
        <Button
            android:id="@+id/personalized_diet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personalized_diet_plan"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:backgroundTint="#F48FB1"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/semibold_font"/>


    </LinearLayout>

    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        app:itemIconTint="@color/Light_pink"
        app:itemTextColor="@color/Light_pink"
        app:menu="@menu/menu_main"/>

</RelativeLayout>
